--- a/DisneyDown.Console/DisneyDown.Console.csproj
+++ b/DisneyDown.Console/DisneyDown.Console.csproj
@@ -40,8 +40,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Timers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
