--- a/DisneyDown.Console/DisneyDown.Console.csproj
+++ b/DisneyDown.Console/DisneyDown.Console.csproj
@@ -40,10 +40,8 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Extensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Timers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -54,8 +52,6 @@
       <Name>DisneyDown.Common</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Common\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
