--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BandwidthDefinitions.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Net\ResourceGrab.cs" />
     <Compile Include="Processors\Downloaders\AudioDownloader.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Processors\Parsers\MasterParsers.cs" />
     <Compile Include="Processors\SegmentHandlers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Timers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
