Refactors and functionality improvements

--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -41,8 +41,10 @@
   <ItemGroup>
     <Compile Include="BandwidthDefinitions.cs" />
     <Compile Include="Extensions.cs" />
+    <Compile Include="Md5Helper.cs" />
     <Compile Include="Methods.cs" />
     <Compile Include="Net\ResourceGrab.cs" />
+    <Compile Include="Processor.cs" />
     <Compile Include="Processors\Downloaders\AudioDownloader.cs" />
     <Compile Include="Processors\Downloaders\VideoDownloader.cs" />
     <Compile Include="Processors\External.cs" />
