--- a/WidevineLicensor/WidevineLicensor.csproj
+++ b/WidevineLicensor/WidevineLicensor.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions.cs" />
     <Compile Include="WidevineProtocol\LicenseReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WidevineProtocol\LicenseKeys.cs" />
