--- a/DisneyDown.Common.Parsers.HLS/DisneyDown.Common.Parsers.HLS.csproj
+++ b/DisneyDown.Common.Parsers.HLS/DisneyDown.Common.Parsers.HLS.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5B34646D-0494-43FA-BC45-568D5A167A40}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>DisneyDown.Console.Dash</RootNamespace>
-    <AssemblyName>DisneyDown.Console.Dash</AssemblyName>
+    <ProjectGuid>{E72C3DBE-762A-45F4-B85D-439075E74B12}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>DisneyDown.Common.Parsers.HLS</RootNamespace>
+    <AssemblyName>DisneyDown.Common.Parsers.HLS</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -33,33 +31,26 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Sprache.Signed, Version=2.3.1.0, Culture=neutral, PublicKeyToken=57f43ee1809c4ea6, processorArchitecture=MSIL">
+      <HintPath>..\packages\Sprache.Signed.2.3.1\lib\net45\Sprache.Signed.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\Extensions.cs" />
-    <Compile Include="Common\Protection\ProtectionId.cs" />
-    <Compile Include="Common\Protection\ProtectionSchemes.cs" />
-    <Compile Include="Common\Protection\ProtectionUUID.cs" />
-    <Compile Include="PrimeMPD\Globals.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\AdaptationSet.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\AudioChannelConfiguration.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\ContentProtection.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\Initialization.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\Role.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\MarlinContentIds.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\Manifest.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\Period.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\Representation.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\RepresentationIndex.cs" />
-    <Compile Include="PrimeMPD\XmlObjects\SegmentBase.cs" />
-    <Compile Include="Program.cs" />
+    <Compile Include="EnumParser.cs" />
+    <Compile Include="PlaylistGrammar.cs" />
+    <Compile Include="PlaylistParser.cs" />
+    <Compile Include="Playlist\Playlist.cs" />
+    <Compile Include="Playlist\PlaylistId.cs" />
+    <Compile Include="Playlist\PlaylistItem.cs" />
+    <Compile Include="Playlist\PlaylistTagAttribute.cs" />
+    <Compile Include="Playlist\PlaylistTagItem.cs" />
+    <Compile Include="Playlist\PlaylistUriItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
