--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -31,9 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Sprache, Version=2.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Sprache.2.3.1\lib\net45\Sprache.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
@@ -54,24 +51,17 @@
     <Compile Include="Processors\Downloaders\Audio\MainAudioDownloader.cs" />
     <Compile Include="Processors\Downloaders\Video\MainVideoDownloader.cs" />
     <Compile Include="Processors\External.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\EnumParser.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\PlaylistGrammar.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\PlaylistParser.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\Playlist\Playlist.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\Playlist\PlaylistId.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\Playlist\PlaylistItem.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\Playlist\PlaylistTagAttribute.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\Playlist\PlaylistTagItem.cs" />
-    <Compile Include="Processors\Parsers\HLSParser\Playlist\PlaylistUriItem.cs" />
-    <Compile Include="Processors\Parsers\ManifestParsers.cs" />
-    <Compile Include="Processors\Parsers\MasterParsers.cs" />
+    <Compile Include="Parsers\ManifestParsers.cs" />
+    <Compile Include="Parsers\MasterParsers.cs" />
     <Compile Include="Processors\SegmentHandlers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Diagnostics\Timers.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\DisneyDown.Common.Parsers.HLS\DisneyDown.Common.Parsers.HLS.csproj">
+      <Project>{e72c3dbe-762a-45f4-b85d-439075e74b12}</Project>
+      <Name>DisneyDown.Common.Parsers.HLS</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
