QualityRating return system introduced; fixed faulty bumper merge

--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -40,6 +40,7 @@
     <Compile Include="Globals\Args.cs" />
     <Compile Include="Globals\Verification.cs" />
     <Compile Include="Globals\BandwidthDefinitions.cs" />
+    <Compile Include="Parsers\QualityRating.cs" />
     <Compile Include="Processors\Downloaders\Audio\BumperAudioDownloader.cs" />
     <Compile Include="Processors\Downloaders\Subtitles\MainSubtitlesDownloader.cs" />
     <Compile Include="Processors\Downloaders\Video\BumperVideoDownloader.cs" />
