--- a/DisneyDown.Common.ExternalRetrieval/DisneyDown.Common.ExternalRetrieval.csproj
+++ b/DisneyDown.Common.ExternalRetrieval/DisneyDown.Common.ExternalRetrieval.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A121A22D-A229-4EB5-9D81-908E69EC95EE}</ProjectGuid>
+    <ProjectGuid>{E57471F5-65BE-4997-BE81-EDEF4435313E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DisneyDown.Common</RootNamespace>
-    <AssemblyName>DisneyDown.Common</AssemblyName>
+    <RootNamespace>DisneyDown.Common.ExternalRetrieval</RootNamespace>
+    <AssemblyName>DisneyDown.Common.ExternalRetrieval</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -35,52 +35,20 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Globals\Strings.cs" />
-    <Compile Include="Globals\Args.cs" />
-    <Compile Include="Globals\Verification.cs" />
-    <Compile Include="Globals\BandwidthDefinitions.cs" />
-    <Compile Include="Parsers\QualityRating.cs" />
-    <Compile Include="Processors\Downloaders\Audio\BumperAudioDownloader.cs" />
-    <Compile Include="Processors\Downloaders\Subtitles\MainSubtitlesDownloader.cs" />
-    <Compile Include="Processors\Downloaders\Video\BumperVideoDownloader.cs" />
-    <Compile Include="Processors\SubtitleProcessor.cs" />
-    <Compile Include="Util\Diagnostics\BumperTimers.cs" />
-    <Compile Include="Util\Diagnostics\MainTimers.cs" />
-    <Compile Include="Util\Extensions.cs" />
-    <Compile Include="Util\Methods.cs" />
-    <Compile Include="Processors\MainProcessor.cs" />
-    <Compile Include="Processors\Downloaders\Audio\MainAudioDownloader.cs" />
-    <Compile Include="Processors\Downloaders\Video\MainVideoDownloader.cs" />
-    <Compile Include="Processors\External.cs" />
-    <Compile Include="Parsers\ManifestParsers.cs" />
-    <Compile Include="Parsers\MasterParsers.cs" />
-    <Compile Include="Processors\SegmentHandlers.cs" />
+    <Compile Include="Endpoints.cs" />
+    <Compile Include="FFMpeg.cs" />
+    <Compile Include="MP4Decrypt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Util\Diagnostics\Timers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DisneyDown.Common.Net\DisneyDown.Common.Net.csproj">
       <Project>{e8a05637-f1f8-48df-a52f-e17587e832ae}</Project>
       <Name>DisneyDown.Common.Net</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DisneyDown.Common.Parsers.HLS\DisneyDown.Common.Parsers.HLS.csproj">
-      <Project>{e72c3dbe-762a-45f4-b85d-439075e74b12}</Project>
-      <Name>DisneyDown.Common.Parsers.HLS</Name>
-    </ProjectReference>
     <ProjectReference Include="..\DisneyDown.Common.Security\DisneyDown.Common.Security.csproj">
       <Project>{35b93821-9759-4b5f-8adf-c238ed3d0e72}</Project>
       <Name>DisneyDown.Common.Security</Name>
     </ProjectReference>
-    <ProjectReference Include="..\DisneyDown.Common.Util.Kit\DisneyDown.Common.Util.Kit.csproj">
-      <Project>{1df9eab5-5707-4f5e-8dae-a791c3f3cd42}</Project>
-      <Name>DisneyDown.Common.Util.Kit</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Connected Services\" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Security\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
