--- a/DisneyDown.Common.ExternalRetrieval/DisneyDown.Common.ExternalRetrieval.csproj
+++ b/DisneyDown.Common.ExternalRetrieval/DisneyDown.Common.ExternalRetrieval.csproj
@@ -33,8 +33,11 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArchiveHandler.cs" />
     <Compile Include="Endpoints.cs" />
     <Compile Include="FFMpeg.cs" />
     <Compile Include="MP4Decrypt.cs" />
@@ -48,6 +51,10 @@
     <ProjectReference Include="..\DisneyDown.Common.Security\DisneyDown.Common.Security.csproj">
       <Project>{35b93821-9759-4b5f-8adf-c238ed3d0e72}</Project>
       <Name>DisneyDown.Common.Security</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DisneyDown.Common.Util.Kit\DisneyDown.Common.Util.Kit.csproj">
+      <Project>{1df9eab5-5707-4f5e-8dae-a791c3f3cd42}</Project>
+      <Name>DisneyDown.Common.Util.Kit</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
