Cosmetic and infrastructural changes

--- a/DisneyDown.Common.Util.Kit/DisneyDown.Common.Util.Kit.csproj
+++ b/DisneyDown.Common.Util.Kit/DisneyDown.Common.Util.Kit.csproj
@@ -40,10 +40,11 @@
     <Compile Include="ConsoleImageAscii.cs" />
     <Compile Include="ConsoleSpinner.cs" />
     <Compile Include="ConsoleSpinnerSequence.cs" />
+    <Compile Include="ConsoleTools.cs" />
     <Compile Include="Enums\ConsoleWriterMode.cs" />
     <Compile Include="ConsoleWriters.cs" />
-    <Compile Include="Interop.cs" />
-    <Compile Include="InteropConst.cs" />
+    <Compile Include="Unmanaged\Interop.cs" />
+    <Compile Include="Unmanaged\InteropConst.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
