--- a/DisneyDown.Common.KeySystem/DisneyDown.Common.KeySystem.csproj
+++ b/DisneyDown.Common.KeySystem/DisneyDown.Common.KeySystem.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7502C0DF-9E69-4AC3-AF72-F950AFA77962}</ProjectGuid>
+    <ProjectGuid>{E60E0CFD-3D67-485D-B96E-7FDD3F1A49E7}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DisneyDown.Common.API</RootNamespace>
-    <AssemblyName>DisneyDown.Common.API</AssemblyName>
+    <RootNamespace>DisneyDown.Common.KeySystem</RootNamespace>
+    <AssemblyName>DisneyDown.Common.KeySystem</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,17 +31,41 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=106.12.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.106.12.0\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthInfo.cs" />
+    <Compile Include="Connection.cs" />
+    <Compile Include="KeySystemEndpoints.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schemas\GenericServiceResponse.cs" />
+    <Compile Include="Schemas\Response.cs" />
+    <Compile Include="Schemas\Status.cs" />
+    <Compile Include="Schemas\StatusCode.cs" />
+    <Compile Include="Schemas\StoredKey.cs" />
+    <Compile Include="ServiceInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DisneyDown.Common.Net\DisneyDown.Common.Net.csproj">
-      <Project>{e8a05637-f1f8-48df-a52f-e17587e832ae}</Project>
-      <Name>DisneyDown.Common.Net</Name>
+    <ProjectReference Include="..\DisneyDown.Common.Security\DisneyDown.Common.Security.csproj">
+      <Project>{35b93821-9759-4b5f-8adf-c238ed3d0e72}</Project>
+      <Name>DisneyDown.Common.Security</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DisneyDown.Common.Util.Kit\DisneyDown.Common.Util.Kit.csproj">
+      <Project>{1df9eab5-5707-4f5e-8dae-a791c3f3cd42}</Project>
+      <Name>DisneyDown.Common.Util.Kit</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
