--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -38,6 +38,7 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Globals\Objects.cs" />
     <Compile Include="Globals\Strings.cs" />
     <Compile Include="Globals\Args.cs" />
     <Compile Include="Globals\Verification.cs" />
@@ -77,6 +78,10 @@
     <ProjectReference Include="..\DisneyDown.Common.ExternalRetrieval\DisneyDown.Common.ExternalRetrieval.csproj">
       <Project>{e57471f5-65be-4997-be81-edef4435313e}</Project>
       <Name>DisneyDown.Common.ExternalRetrieval</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DisneyDown.Common.KeySystem\DisneyDown.Common.KeySystem.csproj">
+      <Project>{e60e0cfd-3d67-485d-b96e-7fdd3f1a49e7}</Project>
+      <Name>DisneyDown.Common.KeySystem</Name>
     </ProjectReference>
     <ProjectReference Include="..\DisneyDown.Common.Net\DisneyDown.Common.Net.csproj">
       <Project>{e8a05637-f1f8-48df-a52f-e17587e832ae}</Project>
