fixed some major infrastructural issues

--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -48,18 +48,18 @@
     <Compile Include="Processors\Downloaders\Subtitles\MainSubtitlesDownloader.cs" />
     <Compile Include="Processors\Downloaders\Video\BumperVideoDownloader.cs" />
     <Compile Include="Processors\SubtitleProcessor.cs" />
-    <Compile Include="Schemas\AmbitiousChild.cs" />
-    <Compile Include="Schemas\Converter.cs" />
-    <Compile Include="Schemas\FluffyChild.cs" />
-    <Compile Include="Schemas\HilariousChild.cs" />
-    <Compile Include="Schemas\IndecentChild.cs" />
-    <Compile Include="Schemas\IndigoChild.cs" />
-    <Compile Include="Schemas\Mp4DumpSchema.cs" />
-    <Compile Include="Schemas\Mp4DumpSchemaChild.cs" />
-    <Compile Include="Schemas\PurpleChild.cs" />
-    <Compile Include="Schemas\Serialize.cs" />
-    <Compile Include="Schemas\StickyChild.cs" />
-    <Compile Include="Schemas\TentacledChild.cs" />
+    <Compile Include="Schemas\MP4Dump\AmbitiousChild.cs" />
+    <Compile Include="Schemas\MP4Dump\Converter.cs" />
+    <Compile Include="Schemas\MP4Dump\FluffyChild.cs" />
+    <Compile Include="Schemas\MP4Dump\HilariousChild.cs" />
+    <Compile Include="Schemas\MP4Dump\IndecentChild.cs" />
+    <Compile Include="Schemas\MP4Dump\IndigoChild.cs" />
+    <Compile Include="Schemas\MP4Dump\Mp4DumpTopLevelAtom.cs" />
+    <Compile Include="Schemas\MP4Dump\Mp4DumpSchemaChild.cs" />
+    <Compile Include="Schemas\MP4Dump\PurpleChild.cs" />
+    <Compile Include="Schemas\MP4Dump\Serialize.cs" />
+    <Compile Include="Schemas\MP4Dump\StickyChild.cs" />
+    <Compile Include="Schemas\MP4Dump\TentacledChild.cs" />
     <Compile Include="Util\Diagnostics\BumperTimers.cs" />
     <Compile Include="Util\Diagnostics\MainTimers.cs" />
     <Compile Include="Util\Extensions.cs" />
