Massive infrastructural overhauls

--- a/DisneyDown.Common/DisneyDown.Common.csproj
+++ b/DisneyDown.Common/DisneyDown.Common.csproj
@@ -40,6 +40,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\DataTableConversion.cs" />
+    <Compile Include="Globals\FilterValues\FilterValuesProvider.cs" />
+    <Compile Include="Globals\FilterValues\FilterValuesMain.cs" />
     <Compile Include="Globals\Objects.cs" />
     <Compile Include="Globals\Strings.cs" />
     <Compile Include="Globals\Args.cs" />
