--- a/DisneyDown.Console/DisneyDown.Console.csproj
+++ b/DisneyDown.Console/DisneyDown.Console.csproj
@@ -47,6 +47,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DisneyDown.Common.API\DisneyDown.Common.API.csproj">
+      <Project>{aae2e3ad-4a98-4361-bdeb-83a66dcc0fdf}</Project>
+      <Name>DisneyDown.Common.API</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DisneyDown.Common.KeySystem.Manager\DisneyDown.Common.KeySystem.Manager.csproj">
       <Project>{57fdce0c-9aa4-40c1-8635-89bdb7e9b84c}</Project>
       <Name>DisneyDown.Common.KeySystem.Manager</Name>
