--- a/DisneyDown.Common.API/DisneyDown.Common.API.csproj
+++ b/DisneyDown.Common.API/DisneyDown.Common.API.csproj
@@ -37,22 +37,45 @@
     <Reference Include="RestSharp, Version=106.12.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
       <HintPath>..\packages\RestSharp.106.12.0\lib\net452\RestSharp.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp.Serializers.NewtonsoftJson, Version=106.12.0.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\packages\RestSharp.Serializers.NewtonsoftJson.106.12.0\lib\net452\RestSharp.Serializers.NewtonsoftJson.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CommonTools.cs" />
+    <Compile Include="Globals\Objects.cs" />
+    <Compile Include="Globals\Strings.cs" />
+    <Compile Include="JsonUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Schemas\Converter.cs" />
+    <Compile Include="Schemas\Services.cs" />
+    <Compile Include="Structures\ApiConfiguration.cs" />
+    <Compile Include="Structures\ApiDevice\ApiDevice.cs" />
+    <Compile Include="Structures\ApiDevice\ApiDeviceAttributes.cs" />
+    <Compile Include="Structures\ApiDevice\ApiDeviceChrome.cs" />
+    <Compile Include="Structures\ApiDevice\ApiDeviceId.cs" />
+    <Compile Include="Schemas\TokenGrantResponse.cs" />
+    <Compile Include="Structures\RequestPayloads\DeviceGrantRequestPayload.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DisneyDown.Common.Net\DisneyDown.Common.Net.csproj">
+      <Project>{e8a05637-f1f8-48df-a52f-e17587e832ae}</Project>
+      <Name>DisneyDown.Common.Net</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DisneyDown.Common.Util.Kit\DisneyDown.Common.Util.Kit.csproj">
+      <Project>{1df9eab5-5707-4f5e-8dae-a791c3f3cd42}</Project>
+      <Name>DisneyDown.Common.Util.Kit</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
