--- a/DisneyDown.Common.API/packages.config
+++ b/DisneyDown.Common.API/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="RestSharp" version="106.12.0" targetFramework="net472" />
+  <package id="RestSharp.Serializers.NewtonsoftJson" version="106.12.0" targetFramework="net472" />
 </packages>
