--- a/DisneyDown.Common.API/DisneyDown.Common.API.csproj
+++ b/DisneyDown.Common.API/DisneyDown.Common.API.csproj
@@ -51,7 +51,6 @@
     <Compile Include="Enums\ExchangeType.cs" />
     <Compile Include="Globals\Objects.cs" />
     <Compile Include="Globals\Strings.cs" />
-    <Compile Include="JsonUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Schemas\AuthenticationSchemas\BAMIdentityResponse.cs" />
     <Compile Include="Schemas\Converter.cs" />
@@ -85,6 +84,10 @@
     <ProjectReference Include="..\DisneyDown.Common.Util.Kit\DisneyDown.Common.Util.Kit.csproj">
       <Project>{1df9eab5-5707-4f5e-8dae-a791c3f3cd42}</Project>
       <Name>DisneyDown.Common.Util.Kit</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DisneyDown.Common\DisneyDown.Common.csproj">
+      <Project>{a121a22d-a229-4eb5-9d81-908e69ec95ee}</Project>
+      <Name>DisneyDown.Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
